--- a/frontend/src/pages/PrivacyPolicyPage.module.css
+++ b/frontend/src/pages/PrivacyPolicyPage.module.css
@@ -1,5 +1,9 @@
 .page {
   padding: 72px 24px 96px;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  align-self: stretch;
 }
 
 .header {
