--- a/frontend/src/pages/AuthPage.module.css
+++ b/frontend/src/pages/AuthPage.module.css
@@ -2,6 +2,10 @@
   padding: 80px 24px;
   display: flex;
   justify-content: center;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  align-self: stretch;
 }
 
 .card {
