--- a/frontend/src/pages/CatalogPage.module.css
+++ b/frontend/src/pages/CatalogPage.module.css
@@ -1,5 +1,9 @@
 .page {
-  padding: 64px 0 96px;
+  padding: 64px 24px 96px;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  align-self: stretch;
 }
 
 .header {
@@ -7,7 +11,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 24px;
-  width: 1280px;
+  width: 100%;
 }
 
 .header h1 {
