--- a/frontend/src/pages/ProductReviewsPage.module.css
+++ b/frontend/src/pages/ProductReviewsPage.module.css
@@ -1,5 +1,9 @@
 .page {
-  padding: 64px 0 96px;
+  padding: 64px 24px 96px;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  align-self: stretch;
 }
 
 .header {
